[package]
name = "andraste-distribution-builder"
description = "CLI tool to compile Andraste releases from multiple github repositories"
version = "0.1.0"
edition = "2024"
authors = ["MeFisto94"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
clap-verbosity-flag = "3.0.4"
env_logger = { version ="0.11.8", features = ["auto-color", "humantime"] }
log = "0.4.28"
octocrab = "0.44.1"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
reqwest = "0.12.23"
zip = { version = "5.0.0", default-features = false, features = ["deflate-flate2-zlib-rs", "time"] }
dircpy = {  version = "0.3.19", default-features = false } # sadly not builtin, we don't need complexity, but I also didn't want to write dir walkers.
walkdir = { version = "2.5.0" }
text-template = "0.1.0"
chrono = "0.4.41"

[profile.release]
codegen-units = 1
lto = true
